   slot inlining would be activated by a SPEED of 1, but only if DEBUG and
   SAFETY are below 2.

 - Important performance improvements in sequence functions, such as FIND,
   SEARCH, REPLACE, POSITION, COUNT, REMOVE, DELETE, SUBSTITUTE, NSUBSTITUTE,
   DELETE-DUPLICATES, REMOVE-DUPLICATES and their possible IF/IF-NOT
   variants. Except COUNT, for efficiency, some of the previously mentioned
   functions may run through the sequences in arbitrary orders one or more
   times.

 - LOOP is now capable of declaring an iteration variable to have a
   more precise type (fixnum, single-float, etc), when the iteration limits
   are known, as in (LOOP FOR I FROM 0 TO 1000 ....)

 - ASSERT is now "cheaper", delegating the job on an auxiliary function and
   not creating any nonlocal jump structures (TAGBODY, etc).

 - ECL's dynamic foreign function interface, that is the FFI that works for
   interpreted and evaluated code and that does not need a C compiler, now
   depends on libffi -- without it, it will refuse to build.

 - ECL exports a new feature, :C++, when it is built with a C++ compiler.

 - Function proclamations and declarations are also used to deduce the type
   of their arguments.

 - (EXPT 2 -2.0d0) is now computed in double precision.

 - When building programs with ASDF:MAKE-BUILD, "prebuilt-asdf" may be listed
   in the dependencies, as the last one, so that ASDF is linked in. It is
   required by some packages that do not distinguish between compilation and
   distribution.

 - ECL now captures SIGPIPE.

 - In DEFMACRO forms, the &WHOLE argument may now be declared
   ignorable. Formerly it was always referenced by the destructuring code of
   the macro.

 - ECL mistakenly allowed the rational denominator to carry a sign, as in 1/-2.

 - When used with -debug and the command line options cause some error ECL
   oferts an ABORT and a CONTINUE restarts.

;;; Local Variables: ***
;;; mode:text ***
;;; fill-column:79 ***
;;; End: ***